--- a/config/Localization/metratech.com/metratech.com_defaultproductview_pt-br.xml
+++ b/config/Localization/metratech.com/metratech.com_defaultproductview_pt-br.xml
@@ -88,11 +88,11 @@
         </locale_entry>
 		<locale_entry>
 			<Name>metratech.com/DefaultProductView/IsTaxInclusive</Name>
-			<Value>(Portuguese)Is tax inclusive?</Value>
+			<Value>[pt-BR]Is tax inclusive?</Value>
 		</locale_entry>
 		<locale_entry>
 			<Name>metratech.com/DefaultProductView/IsTaxInformational</Name>
-			<Value>(Portuguese)Is tax informational?</Value>
+			<Value>[pt-BR]Is tax informational?</Value>
 		</locale_entry>
         <locale_entry>
             <Name>metratech.com/DefaultProductView/LocalTaxAmount</Name>
