--- a/config/Localization/metratech.com/metratech.com_DefaultProductView_de.xml
+++ b/config/Localization/metratech.com/metratech.com_DefaultProductView_de.xml
@@ -88,11 +88,11 @@
         </locale_entry>
 		<locale_entry>
 			<Name>metratech.com/DefaultProductView/IsTaxInclusive</Name>
-			<Value>(German)Is tax inclusive?</Value>
+			<Value>[DE]Is tax inclusive?</Value>
 		</locale_entry>
 		<locale_entry>
 			<Name>metratech.com/DefaultProductView/IsTaxInformational</Name>
-			<Value>(German)Is tax informational?</Value>
+			<Value>[DE]Is tax informational?</Value>
 		</locale_entry><locale_entry>
             <Name>metratech.com/DefaultProductView/LocalTaxAmount</Name>
             <Value>Betrag der Gemeindesteuer</Value>
